# utility-mcp-server

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  SECURITY.md  api.py  campaigns.json  index_main.js  llm_layer.py  main.py  push_pipeline.py  pyproject.toml  railway.json  railway.toml  requirements.txt  root.html  server.json  server.py  test_local.py  tms_client.py
.github/: copilot-instructions.md
.github/workflows/: ai-pentester.yml
api-docs/lifecycle/: init.md
api-docs/transaction/: checkStatus.md  doTransaction.md
cicd/: dev_mcp_values.yaml
data/: chunks.json  embeddings.json  faiss.index
docs/: ARTIFACT_STORE_FORMAT.md  get_documentation_list.json  index.html  pinelabs-sdk.html
docs/api/: checkStatus.html  doTransaction.html  init.html
docs/apis/: cancel.md  check_status.md  connect.md  constructor.md  disconnect.md  discover_terminals.md  do_transaction.md  get_logs.md  get_terminal_info.md  is_connected.md  ping.md  restart.md  run_self_test.md  set_transport.md  test_print.md  upload_imei_list.md
docs/concepts/: capabilities.md  error-handling.md  eventid-and-reconciliation.md  overview.md  transports.md  versioning-and-support.md
docs/doc_list/apis/: cancel.md  check_status.md  connect.md  constructor.md  disconnect.md  discover_terminals.md  do_transaction.md  ping.md  (+8 more)
docs/languages/: android.md  c.md  ios.md  nodejs.md  python.md
docs/models/: AppToAppTransactionOptions.md  CheckStatusOptions.md  CloudConfig.md  CloudIdentity.md  CloudUploadImeiListOptions.md  DiscoveryListener.md  PaymentMode.md  PlatformAppToAppBridge.md  PlatformBridge.md  Terminal.md  TerminalLogs.md  TestPrintListener.md  TransactionRequest.md  TransactionResult.md  TransactionStatus.md  TransactionType.md  TransportType.md  UploadImeiListResult.md
sdk/: pinelabs-sdk-0.1.0.aar
src/: __init__.py  config.py  logging_config.py  server.py
src/services/: docs_client.py  sdk_registry.py
src/tools/: __init__.py  api_docs.py  sdk_download.py
src/utility_mcp_server/: config.py  logging_config.py  server.py
tests/: test_rag_chunker.py  test_smoke.py
utility_mcp_server/: __init__.py  cli.py  config.py  docs_client.py  server.py  tools.py
utility_mcp_server/rag/: README.md  __init__.py  build_index.py  chunk.py  chunker.py  cli.py  embed.py  embedder.py  generate.py  index.py  ingest.py  store.py
(+88 files in other folders)
