[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "utility-mcp-server"
version = "1.0.0"
description = "MCP server with IST time, date, and share price tools"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.6.0",
    "yfinance>=0.2.54",
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
]

[project.scripts]
utility-mcp-server = "main:main"

[project.urls]
Homepage = "https://github.com/prakhargour10/utility-mcp-server"
Repository = "https://github.com/prakhargour10/utility-mcp-server"
