[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "utility-mcp-server"
version = "1.0.0"
description = "MCP server with IST time, date, and share price tools"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.6.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    "httpx>=0.27.0",
]

[project.scripts]
utility-mcp-server = "main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/utility_mcp_server"]

[project.urls]
Homepage = "https://github.com/prakhargour10/utility-mcp-server"
Repository = "https://github.com/prakhargour10/utility-mcp-server"
