[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "utility-mcp-server"
version = "1.3.0"
description = "MCP server exposing Pine Labs SDK API documentation and download links."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.6.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
utility-mcp-server = "utility_mcp_server.cli:main"
rag-rebuild = "utility_mcp_server.rag.cli:rebuild_main"
rag-load = "utility_mcp_server.rag.cli:load_main"

[tool.hatch.build.targets.wheel]
packages = ["utility_mcp_server"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[project.urls]
Homepage = "https://github.com/prakhargour10/utility-mcp-server"
Repository = "https://github.com/prakhargour10/utility-mcp-server"
